Part2-repo/02-kubeapps/kubeapps-all-in-one.yaml
---
# Source: kubeapps/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubeapps-postgresql
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.4.0
    helm.sh/chart: postgresql-16.6.7
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: kubeapps/templates/apprepository/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubeapps-internal-apprepository-controller
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: apprepository
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: apprepository
  egress:
    - {}
  ingress:
---
# Source: kubeapps/templates/dashboard/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubeapps-internal-dashboard
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: dashboard
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: dashboard
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 8080
---
# Source: kubeapps/templates/frontend/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubeapps
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 1.28.0
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: frontend
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: frontend
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 8080
---
# Source: kubeapps/templates/kubeappsapis/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubeapps-internal-kubeappsapis
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: kubeappsapis
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: kubeappsapis
  egress:
    - {}
  ingress:
    # Allow inbound connections
    - ports:
        - port: 50051
---
# Source: kubeapps/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapps-postgresql-hl
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.4.0
    helm.sh/chart: postgresql-16.6.7
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: kubeapps/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapps-postgresql
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.4.0
    helm.sh/chart: postgresql-16.6.7
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: kubeapps/templates/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapps-internal-dashboard
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/component: dashboard
---
# Source: kubeapps/templates/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapps
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 1.28.0
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      nodePort: null
  selector:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/component: frontend
---
# Source: kubeapps/templates/kubeappsapis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeapps-internal-kubeappsapis
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: kubeappsapis
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: grpc-http
      protocol: TCP
      name: grpc-http
  selector:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/component: kubeappsapis
---
# Source: kubeapps/templates/apprepository/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapps-internal-apprepository-controller
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: apprepository
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: apprepository
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kubeapps
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kubeapps
        app.kubernetes.io/version: 2.12.1
        helm.sh/chart: kubeapps-18.0.1
        app.kubernetes.io/component: apprepository
    spec:
      
      serviceAccountName: kubeapps-internal-apprepository-controller
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: kubeapps
                    app.kubernetes.io/name: kubeapps
                    app.kubernetes.io/component: apprepository
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: controller
          image: kubeapps/apprepository-controller
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - /apprepository-controller
          args:
            - --user-agent-comment=kubeapps/2.12.1
            - --repo-sync-image=$(REPO_SYNC_IMAGE)
            - --repo-sync-cmd=/asset-syncer
            - --namespace=kubeapps
            - --global-repos-namespace=kubeapps
            - --database-secret-name=kubeapps-postgresql
            - --database-secret-key=postgres-password
            - --database-url=kubeapps-postgresql:5432
            - --database-user=postgres
            - --database-name=assets
            - --repos-per-namespace=true
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
      volumes:
        - name: empty-dir
          emptyDir: {}
---
# Source: kubeapps/templates/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapps-internal-dashboard
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: dashboard
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: dashboard
  template:
    metadata:
      annotations:
        checksum/config: 1142ff2b055b9f0442c1deb76542f6bde53a8a63c6f40985a92effe9e5729545
      labels:
        app.kubernetes.io/instance: kubeapps
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kubeapps
        app.kubernetes.io/version: 2.12.1
        helm.sh/chart: kubeapps-18.0.1
        app.kubernetes.io/component: dashboard
    spec:
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: kubeapps
                    app.kubernetes.io/name: kubeapps
                    app.kubernetes.io/component: dashboard
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: dashboard
          image: kubeapps/dashboard:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: http
          startupProbe:
            failureThreshold: 6
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: http
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: vhost
              mountPath: /opt/bitnami/nginx/conf/server_blocks
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/nginx/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/nginx/logs
              subPath: app-logs-dir
            - name: config
              mountPath: /app/config.json
              subPath: config.json
            - mountPath: /app/custom-css
              name: custom-css
            - mountPath: /app/custom-locale
              name: custom-locale
            - mountPath: /app/custom-components
              name: custom-components
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: vhost
          configMap:
            name: kubeapps-internal-dashboard-config
            items:
              - key: vhost.conf
                path: vhost.conf
        - name: config
          configMap:
            name: kubeapps-internal-dashboard-config
            items:
              - key: config.json
                path: config.json
        - name: custom-css
          configMap:
            name: kubeapps-internal-dashboard-config
            items:
              - key: custom_style.css
                path: custom_style.css
        - name: custom-locale
          configMap:
            name: kubeapps-internal-dashboard-config
            items:
              - key: custom_locale.json
                path: custom_locale.json
        - name: custom-components
          configMap:
            name: kubeapps-internal-dashboard-config
            items:
              - key: custom_components.js
                path: custom_components.js
---
# Source: kubeapps/templates/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapps
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 1.28.0
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: frontend
  template:
    metadata:
      annotations:
        checksum/config: 583053b18c93439b61e1f3313f087f46f2f89f10fa2ec49f73f1f3f3633a5755
      labels:
        app.kubernetes.io/instance: kubeapps
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kubeapps
        app.kubernetes.io/version: 1.28.0
        helm.sh/chart: kubeapps-18.0.1
        app.kubernetes.io/component: frontend
    spec:
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: kubeapps
                    app.kubernetes.io/name: kubeapps
                    app.kubernetes.io/component: frontend
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: nginx
          image: docker.io/bitnamilegacy/nginx:1.28.0-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/nginx/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/nginx/logs
              subPath: app-logs-dir
            - name: vhost
              mountPath: /opt/bitnami/nginx/conf/server_blocks
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: vhost
          configMap:
            name: kubeapps-frontend-config
---
# Source: kubeapps/templates/kubeappsapis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapps-internal-kubeappsapis
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: kubeapps-18.0.1
    app.kubernetes.io/component: kubeappsapis
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: kubeapps
      app.kubernetes.io/component: kubeappsapis
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kubeapps
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kubeapps
        app.kubernetes.io/version: 2.12.1
        helm.sh/chart: kubeapps-18.0.1
        app.kubernetes.io/component: kubeappsapis
    spec:
      
      serviceAccountName: kubeapps-internal-kubeappsapis
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: kubeapps
                    app.kubernetes.io/name: kubeapps
                    app.kubernetes.io/component: kubeappsapis
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      # Increase termination timeout to let remaining operations to finish before ending the pods
      # This is because new releases/upgrades/deletions are synchronous operations
      terminationGracePeriodSeconds: 300
      containers:
        - name: kubeappsapis
          image: docker.io/kubeapps/kubeapps-apis
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - /kubeapps-apis
          args:
            - --plugin-dir
            - /plugins/helm-packages
            - --plugin-dir
            - /plugins/resources
            - --clusters-config-path=/config/clusters.conf
            - --plugin-config-path=/config/kubeapps-apis/plugins.conf
            - --global-repos-namespace=kubeapps
            - --kube-api-qps=50.0
            - --kube-api-burst=100
          ports:
            - name: grpc-http
              containerPort: 50051
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: grpc-http
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command: ["grpc_health_probe", "-addr=:50051"]
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: clusters-config
              mountPath: /config
            - name: ca-certs
              mountPath: /etc/additional-clusters-cafiles
            - name: plugins-config
              mountPath: /config/kubeapps-apis
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: clusters-config
          configMap:
            name: kubeapps-clusters-config
        - name: ca-certs
          emptyDir: {}
        - name: plugins-config
          configMap:
            name: kubeapps-internal-kubeappsapis-configmap
---
# Source: kubeapps/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kubeapps-postgresql
  namespace: "kubeapps"
  labels:
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.4.0
    helm.sh/chart: postgresql-16.6.7
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: kubeapps-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeapps
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: kubeapps-postgresql
      labels:
        app.kubernetes.io/instance: kubeapps
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 17.4.0
        helm.sh/chart: postgresql-16.6.7
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: kubeapps-postgresql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: kubeapps
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnamilegacy/postgresql:17.4.0-debian-12-r19
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -d "dbname=assets" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -d "dbname=assets" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 512Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: postgresql-password
              mountPath: /opt/bitnami/postgresql/secrets/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: postgresql-password
          secret:
            secretName: kubeapps-postgresql
        - name: dshm
          emptyDir:
            medium: Memory
        - name: data
          emptyDir: {}
